// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp renders as expected 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  />,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Sign Up
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected with errors 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  />,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f5bcbc",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      Something went wrong
    </Text>
  </View>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Sign Up
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected with social providers 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  />,
  <View
    style={
      Object {
        "paddingVertical": 4,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 4,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingVertical": 8,
              "width": "100%",
            },
            Object {
              "marginVertical": 8,
            },
          ],
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/amazonLogo.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            },
            Object {
              "paddingHorizontal": 16,
            },
          ]
        }
      />
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Array [
              Object {
                "fontWeight": "400",
              },
              undefined,
            ],
          ]
        }
      >
        Sign In with Amazon
      </Text>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 4,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingVertical": 8,
              "width": "100%",
            },
            Object {
              "marginVertical": 8,
            },
          ],
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/facebookLogo.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            },
            Object {
              "paddingHorizontal": 16,
            },
          ]
        }
      />
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Array [
              Object {
                "fontWeight": "400",
              },
              undefined,
            ],
          ]
        }
      >
        Sign In with Facebook
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "flex": 1,
              "height": 0.5,
            },
            undefined,
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "margin": 8,
              "textAlign": "center",
            },
            Object {
              "paddingVertical": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Or
      </Text>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "flex": 1,
              "height": 0.5,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Sign Up
    </Text>
  </View>,
]
`;
